<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Productversion="">
  <POU Name="FB_N1_M1_PackMLOverallEquipmentEffectivenessOEE" Id="aae50b52-7e38-4b84-ad8f-a8fc08693125" SpecialFunc="None">
    <Declaration><![CDATA[//The Overall Equipment Effectiveness (OEE) algorithm calculates key values to compare the current manufacturing process with its full potential. Optional a boolean signal for Enable Execution can be selected, so that the algorithm is just active if the value of the selected signal is TRUE.
FUNCTION_BLOCK FB_N1_M1_PackMLOverallEquipmentEffectivenessOEE
VAR_INPUT
	tScheduledTime: LINT;
	tOperatingTime: LINT;
	nUnitsProduced: ULINT;
	nDefectiveUnits: ULINT;
	tTimestamp: ULINT;
	bEnableExecution: BOOL := TRUE;
	bReset: BOOL;
	bReconfigure: BOOL := TRUE;
END_VAR
VAR_INPUT PERSISTENT
	tIdealCycleTime: LTIME;
	fThresholdLevelOkWarning: LREAL;
	fThresholdLevelWarningAlarm: LREAL;
END_VAR
VAR_OUTPUT
	bError: BOOL;
	ipTcResult: I_TcMessage;
	bNewResult: BOOL;
	fOEE: LREAL;
	eOeeClass: E_ALY_Classification_3Cls;
	fAvailability: LREAL;
	fPerformance: LREAL;
	fQuality: LREAL;
	fbTimeOeeEventWarning: FB_ALY_DateTime;
	fbTimeOeeEventAlarm: FB_ALY_DateTime;
END_VAR
VAR
	
	R_TRIG_Reconfigure: R_TRIG;
	
	fbALY_OverallEquipmentEffectiveness: FB_ALY_OverallEquipmentEffectiveness;
END_VAR
VAR PERSISTENT
	bConfigured: BOOL;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="Call" Id="3793dafc-ebf1-47b9-a5b2-8a762fa170ae">
      <Declaration><![CDATA[METHOD Call : BOOL
VAR_INPUT
	nCurrentContext: DWORD;
END_VAR
VAR
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF NOT bConfigured THEN
	bConfigured:= TRUE;

	tIdealCycleTime:= LTIME#7s500ms;
	fThresholdLevelOkWarning:= 90;
	fThresholdLevelWarningAlarm:= 75;

END_IF

R_TRIG_Reconfigure(CLK:= bReconfigure);
IF R_TRIG_Reconfigure.Q THEN
	fbALY_OverallEquipmentEffectiveness.Configure(tIdealCycleTime:= tIdealCycleTime, fThresholdLevelOkWarning:= fThresholdLevelOkWarning, fThresholdLevelWarningAlarm:= fThresholdLevelWarningAlarm);

	bReconfigure:= FALSE;
END_IF

IF bReset THEN
	Reset();
END_IF

IF bEnableExecution THEN
	IF F_HasContext(nCurrentContext, nContext) THEN
		fbALY_OverallEquipmentEffectiveness.SetChannelValue(nChannel:= 1, Input:= tScheduledTime);
		fbALY_OverallEquipmentEffectiveness.SetChannelValue(nChannel:= 2, Input:= tOperatingTime);
		fbALY_OverallEquipmentEffectiveness.SetChannelValue(nChannel:= 3, Input:= nUnitsProduced);
		fbALY_OverallEquipmentEffectiveness.SetChannelValue(nChannel:= 4, Input:= nDefectiveUnits);

		fbALY_OverallEquipmentEffectiveness.Call(tTimestamp:= tTimestamp);

		bNewResult:= fbALY_OverallEquipmentEffectiveness.bNewResult;
		fOEE:= fbALY_OverallEquipmentEffectiveness.fOEE;
		eOeeClass:= fbALY_OverallEquipmentEffectiveness.eOeeClass;
		fAvailability:= fbALY_OverallEquipmentEffectiveness.fAvailability;
		fPerformance:= fbALY_OverallEquipmentEffectiveness.fPerformance;
		fQuality:= fbALY_OverallEquipmentEffectiveness.fQuality;
		fbTimeOeeEventWarning:= fbALY_OverallEquipmentEffectiveness.fbTimeOeeEventWarning;
		fbTimeOeeEventAlarm:= fbALY_OverallEquipmentEffectiveness.fbTimeOeeEventAlarm;

		bError:= fbALY_OverallEquipmentEffectiveness.bError;
		ipTcResult:= fbALY_OverallEquipmentEffectiveness.ipResultMessage;
	END_IF
ELSE
	bNewResult:= FALSE;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="Reset" Id="7b6273c6-d013-45f9-ab42-7e36a5b88efe">
      <Declaration><![CDATA[METHOD Reset : BOOL
VAR
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[Reset:= fbALY_OverallEquipmentEffectiveness.Reset();

bNewResult:= fbALY_OverallEquipmentEffectiveness.bNewResult;
fOEE:= fbALY_OverallEquipmentEffectiveness.fOEE;
eOeeClass:= fbALY_OverallEquipmentEffectiveness.eOeeClass;
fAvailability:= fbALY_OverallEquipmentEffectiveness.fAvailability;
fPerformance:= fbALY_OverallEquipmentEffectiveness.fPerformance;
fQuality:= fbALY_OverallEquipmentEffectiveness.fQuality;
fbTimeOeeEventWarning:= fbALY_OverallEquipmentEffectiveness.fbTimeOeeEventWarning;
fbTimeOeeEventAlarm:= fbALY_OverallEquipmentEffectiveness.fbTimeOeeEventAlarm;

bError:= NOT Reset;
ipTcResult:= fbALY_OverallEquipmentEffectiveness.ipResultMessage;]]></ST>
      </Implementation>
    </Method>
    <Method Name="SetHMI" Id="72bd6e99-e1f0-4075-ab12-f03083a4aaec">
      <Declaration><![CDATA[METHOD SetHMI : BOOL
VAR_INPUT
	nContent: DINT;
	pContent: PVOID;
	bHMIReinit: BOOL;
END_VAR
VAR
	pHMI_C1_Network: POINTER TO ST_HMI_C1_Network;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[SetHMI:= FALSE;

CASE nContent OF
	1:
		pHMI_C1_Network:= pContent;

		IF bHMIReinit AND bConfigured THEN
			pHMI_C1_Network^.stHMI_C1_Ctrl2_PackML_Overall_Equipment_Effectiveness_OEE.fM1_fThresholdLevelOkWarning:= fThresholdLevelOkWarning;
			pHMI_C1_Network^.stHMI_C1_Ctrl2_PackML_Overall_Equipment_Effectiveness_OEE.fM1_fThresholdLevelWarningAlarm:= fThresholdLevelWarningAlarm;
			SetHMI:= TRUE;
		END_IF

		pHMI_C1_Network^.stHMI_C1_Ctrl2_PackML_Overall_Equipment_Effectiveness_OEE.fM1_fOEE:= fOEE;
		pHMI_C1_Network^.stHMI_C1_Ctrl2_PackML_Overall_Equipment_Effectiveness_OEE.fM1_fAvailability:= fAvailability;
		pHMI_C1_Network^.stHMI_C1_Ctrl2_PackML_Overall_Equipment_Effectiveness_OEE.fM1_fPerformance:= fPerformance;
		pHMI_C1_Network^.stHMI_C1_Ctrl2_PackML_Overall_Equipment_Effectiveness_OEE.fM1_fQuality:= fQuality;
		pHMI_C1_Network^.stHMI_C1_Ctrl2_PackML_Overall_Equipment_Effectiveness_OEE.eM1_eOeeClass:= eOeeClass;
END_CASE]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetHMI" Id="8917a0dd-c012-44cb-a946-77e957c3d7e2">
      <Declaration><![CDATA[METHOD GetHMI : BOOL
VAR_INPUT
	nContent: DINT;
	pContent: PVOID;
END_VAR
VAR
	pHMI_C1_Network: POINTER TO ST_HMI_C1_Network;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[
CASE nContent OF
	1:
		//Network
		pHMI_C1_Network:= pContent;

		IF pHMI_C1_Network^.stHMI_C1_Ctrl2_PackML_Overall_Equipment_Effectiveness_OEE.bTrigReconfigure THEN
			pHMI_C1_Network^.stHMI_C1_Ctrl2_PackML_Overall_Equipment_Effectiveness_OEE.bTrigReconfigure:= FALSE;
			bReconfigure:= TRUE;

			fThresholdLevelOkWarning:= pHMI_C1_Network^.stHMI_C1_Ctrl2_PackML_Overall_Equipment_Effectiveness_OEE.fM1_fThresholdLevelOkWarning;
			fThresholdLevelWarningAlarm:= pHMI_C1_Network^.stHMI_C1_Ctrl2_PackML_Overall_Equipment_Effectiveness_OEE.fM1_fThresholdLevelWarningAlarm;
		END_IF
END_CASE

GetHMI:= bReconfigure;]]></ST>
      </Implementation>
    </Method>
    <Property Name="nContext" Id="a84335b4-e7c0-4931-8f67-c1a2e6691a19">
      <Declaration><![CDATA[PROPERTY nContext : DWORD]]></Declaration>
      <Get Name="Get" Id="ca08ec49-fc6a-49e4-83fe-eb59f00f4ca9">
        <Declaration><![CDATA[VAR
END_VAR]]></Declaration>
        <Implementation>
          <ST><![CDATA[nContext:= E_VirtualInput.eContext_V1_VirtualInputSource;]]></ST>
        </Implementation>
      </Get>
    </Property>
  </POU>
</TcPlcObject>